--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,6 +1,9 @@
 security:
     encoders:
-        Symfony\Component\Security\Core\User\User: plaintext
+        Symfony\Component\Security\Core\User\User: 
+            algorithm: sha1
+            encode_as_base64: false
+            iterations:         1
 
     role_hierarchy:
         ROLE_ADMIN:       ROLE_USER
@@ -11,7 +14,7 @@ security:
             memory:
                 users:
                     user:  { password: userpass, roles: [ 'ROLE_USER' ] }
-                    admin: { password: adminpass, roles: [ 'ROLE_ADMIN' ] }
+                    AdmUAO: { password: d0be2dc421be4fcd0172e5afceea3970e2f3d940, roles: [ 'ROLE_ADMIN' ] }
 
     firewalls:
         secured_area:
