Add Registro de director + autenticacion security

--- a/src/Ingenieria/UsuarioBundle/Resources/config/routing.yml
+++ b/src/Ingenieria/UsuarioBundle/Resources/config/routing.yml
@@ -17,7 +17,7 @@ usuario_adm_homepage:
     defaults: { _controller: IngenieriaUsuarioBundle:Default:homeAdm }
 
 usuario_registrar_director:
-    pattern:  /registrar-director
+    pattern:  /administrador/registrar-director
     defaults: { _controller: IngenieriaUsuarioBundle:Default:registrarDirector }
 
 usuario_actualizar_director:
