--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -4,18 +4,29 @@ security:
             algorithm: sha1
             encode_as_base64: false
             iterations:         1
+            
+        Ingenieria\UsuarioBundle\Entity\Usuario:
+            algorithm:        sha1
+            encode_as_base64: false
+            iterations:         1
 
     role_hierarchy:
         ROLE_ADMIN:       ROLE_USER
         ROLE_SUPER_ADMIN: [ROLE_USER, ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
 
     providers:
+        chain_provider:
+            chain:
+                    providers: [in_memory, usuarios]
         in_memory:
             memory:
                 users:
                     user:  { password: userpass, roles: [ 'ROLE_USER' ] }
-                    AdmUAO: { password: d0be2dc421be4fcd0172e5afceea3970e2f3d940, roles: [ 'ROLE_ADMIN' ] }
+                    AdmUAO: { password: 5a1a939fa30f7b5358e2ff9b0aa62585c5aa61a1, roles: [ 'ROLE_ADMIN' ] }
+        usuarios:
+            entity: { class: Ingenieria\UsuarioBundle\Entity\Usuario, property: username }
 
+                    
     firewalls:
         secured_area:
             pattern:    ^/*
@@ -23,8 +34,13 @@ security:
             form_login:
                 check_path: usuario_login_check
                 login_path: usuario_login
+                
             logout:
                 path:   /logout
+                
+            provider:       chain_provider
  
     access_control:
             - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+            - { path: ^/administrador/*, roles: ROLE_ADMIN }
+            - { path: ^/director/*, roles: ROLE_DIRECTOR }
