creation bundle profesor

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+ingenieria_profesor:
+    resource: "@IngenieriaProfesorBundle/Resources/config/routing.yml"
+    prefix:   /
+
 ingenieria_director:
     resource: "@IngenieriaDirectorBundle/Resources/config/routing.yml"
     prefix:   /
