--- a/src/Ingenieria/ProfesorBundle/Resources/config/doctrine/Profesor.orm.yml
+++ b/src/Ingenieria/ProfesorBundle/Resources/config/doctrine/Profesor.orm.yml
@@ -1,7 +1,7 @@
-Ingenieria\UsuarioBundle\Entity\Director:
+Ingenieria\ProfesorBundle\Entity\Profesor:
     type: entity
     table: null
-    repositoryClass: Ingenieria\UsuarioBundle\Entity\DirectorRepository
+    repositoryClass: Ingenieria\ProfesorBundle\Entity\ProfesorRepository
     id:
         id:
             type: integer
