add casos de uso registro de profesores

--- a/src/Ingenieria/DirectorBundle/Resources/config/routing.yml
+++ b/src/Ingenieria/DirectorBundle/Resources/config/routing.yml
@@ -12,4 +12,4 @@ ingenieria_director_profesores:
     
 ingenieria_director_registrarprofesor:
     path:     /director/registrar-profesor
-    defaults: { _controller: IngenieriaDirectorBundle:Default:profesores }
+    defaults: { _controller: IngenieriaDirectorBundle:Default:registrarProfesor }
