--- a/src/Ingenieria/ProfesorBundle/Resources/config/routing.yml
+++ b/src/Ingenieria/ProfesorBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
 ingenieria_profesor_homepage:
-    path:     /hello/{name}
+    path:     /profesor
     defaults: { _controller: IngenieriaProfesorBundle:Default:index }
