--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -44,3 +44,4 @@ security:
             - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
             - { path: ^/administrador/*, roles: ROLE_ADMIN }
             - { path: ^/director/*, roles: ROLE_DIRECTOR }
+            - { path: ^/profesor/*, roles: ROLE_PROFESOR }
