add caso de uso ver estudiantes

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+ingenieria_estudiante:
+    resource: "@IngenieriaEstudianteBundle/Resources/config/routing.yml"
+    prefix:   /
+
 ingenieria_profesor:
     resource: "@IngenieriaProfesorBundle/Resources/config/routing.yml"
     prefix:   /
