--- a/src/Ingenieria/ProfesorBundle/Resources/config/doctrine/Profesor.orm.yml
+++ b/src/Ingenieria/ProfesorBundle/Resources/config/doctrine/Profesor.orm.yml
@@ -26,4 +26,9 @@ Ingenieria\ProfesorBundle\Entity\Profesor:
             type: string
             length: '50'
             column: email_institucional
+    oneToMany:
+        actividades:
+            targetEntity: Ingenieria\ProfesorBundle\Entity\Actividad
+            mappedBy: profesor
+
     lifecycleCallbacks: {  }
