add subir estudiantes

--- a/src/Ingenieria/EstudianteBundle/Resources/config/doctrine/Estudiante.orm.yml
+++ b/src/Ingenieria/EstudianteBundle/Resources/config/doctrine/Estudiante.orm.yml
@@ -24,6 +24,7 @@ Ingenieria\EstudianteBundle\Entity\Estudiante:
         email:
             type: string
             length: '50'
+            nullable: true
         emailInstitucional:
             type: string
             length: '50'
