--- a/src/Ingenieria/EstudianteBundle/Resources/config/routing.yml
+++ b/src/Ingenieria/EstudianteBundle/Resources/config/routing.yml
@@ -10,3 +10,6 @@ ingenieria_estudiante_actividades:
     path:     /estudiante/actividades-ofertadas
     defaults: { _controller: IngenieriaEstudianteBundle:Default:actividades }
 
+ingenieria_estudiante_actividad:
+    path:     /estudiante/informacion-actividad
+    defaults: { _controller: IngenieriaEstudianteBundle:Default:actividad }
