--- a/src/Ingenieria/EstudianteBundle/Resources/config/doctrine/Estudiante.orm.yml
+++ b/src/Ingenieria/EstudianteBundle/Resources/config/doctrine/Estudiante.orm.yml
@@ -28,4 +28,12 @@ Ingenieria\EstudianteBundle\Entity\Estudiante:
         emailInstitucional:
             type: string
             length: '50'
+
+    manyToOne:
+        actividad:
+            targetEntity: Ingenieria\ProfesorBundle\Entity\Actividad
+            inversedBy: estudiantes
+            joinColumn:
+                name: actividad
+                referencedColumnName: id
     lifecycleCallbacks: {  }
