add ver profesores administrador

--- a/src/Ingenieria/UsuarioBundle/Resources/config/routing.yml
+++ b/src/Ingenieria/UsuarioBundle/Resources/config/routing.yml
@@ -47,3 +47,7 @@ usuario_registrar_estudiante:
 usuario_subirestudiantes:
     pattern:  /administrador/subir-estudiantes
     defaults: { _controller: IngenieriaUsuarioBundle:Default:subirEstudiantes }
+
+usuario_profesores:
+    path:     /administrador/profesores
+    defaults: { _controller: IngenieriaUsuarioBundle:Default:profesores }
