add inscripcion asignatura

--- a/src/Ingenieria/EstudianteBundle/Resources/config/routing.yml
+++ b/src/Ingenieria/EstudianteBundle/Resources/config/routing.yml
@@ -17,3 +17,7 @@ ingenieria_estudiante_actividad:
 ingenieria_estudiante_inscripcion:
     path:     /estudiante/inscripcion={id}
     defaults: { _controller: IngenieriaEstudianteBundle:Default:inscripcion }
+
+ingenieria_estudiante_confirmar:
+    path:     /estudiante/confirmar={id}
+    defaults: { _controller: IngenieriaEstudianteBundle:Default:confirmar }
