add entity cronograma and relations

--- a/src/Ingenieria/EstudianteBundle/Resources/config/doctrine/Estudiante.orm.yml
+++ b/src/Ingenieria/EstudianteBundle/Resources/config/doctrine/Estudiante.orm.yml
@@ -36,4 +36,8 @@ Ingenieria\EstudianteBundle\Entity\Estudiante:
             joinColumn:
                 name: actividad
                 referencedColumnName: id
+    oneToMany:
+        actividades:
+            targetEntity: Ingenieria\EstudianteBundle\Entity\Cronograma
+            mappedBy: estudiante
     lifecycleCallbacks: {  }
