fix ver estudiantes status cronograma

--- a/src/Ingenieria/EstudianteBundle/Resources/config/doctrine/Estudiante.orm.yml
+++ b/src/Ingenieria/EstudianteBundle/Resources/config/doctrine/Estudiante.orm.yml
@@ -28,6 +28,10 @@ Ingenieria\EstudianteBundle\Entity\Estudiante:
         emailInstitucional:
             type: string
             length: '50'
+        aprobadoCronograma:
+            type: boolean
+            nullable: true
+            column: aprobado_cronograma
 
     manyToOne:
         actividad:
