--- a/src/Ingenieria/ProfesorBundle/Resources/config/routing.yml
+++ b/src/Ingenieria/ProfesorBundle/Resources/config/routing.yml
@@ -25,3 +25,7 @@ ingenieria_profesor_actividad:
 ingenieria_profesor_cronograma:
     pattern:  /profesor/cronograma/{id}
     defaults: { _controller: IngenieriaProfesorBundle:Default:cronograma }
+
+ingenieria_profesor_aprobarcronograma:
+    pattern:  /profesor/aprobar-cronograma/{id}
+    defaults: { _controller: IngenieriaProfesorBundle:Default:aprobar }
