--- a/src/Ingenieria/ProfesorBundle/Resources/config/routing.yml
+++ b/src/Ingenieria/ProfesorBundle/Resources/config/routing.yml
@@ -29,3 +29,7 @@ ingenieria_profesor_cronograma:
 ingenieria_profesor_aprobarcronograma:
     pattern:  /profesor/aprobar-cronograma/{id}
     defaults: { _controller: IngenieriaProfesorBundle:Default:aprobar }
+
+ingenieria_profesor_rechazarcronograma:
+    pattern:  /profesor/rechazar-cronograma/{id}
+    defaults: { _controller: IngenieriaProfesorBundle:Default:rechazar }
