--- a/src/Ingenieria/DirectorBundle/Resources/config/doctrine/Grupo.orm.yml
+++ b/src/Ingenieria/DirectorBundle/Resources/config/doctrine/Grupo.orm.yml
@@ -19,4 +19,9 @@ Ingenieria\DirectorBundle\Entity\Grupo:
             joinColumn:
                  name: tutor
                  referencedColumnName: id
+    oneToMany:
+        estudiantes:
+            targetEntity: Ingenieria\EstudianteBundle\Entity\Estudiante
+            mappedBy: grupo
+
     lifecycleCallbacks: {  }
