--- a/src/Ingenieria/UsuarioBundle/Resources/config/routing.yml
+++ b/src/Ingenieria/UsuarioBundle/Resources/config/routing.yml
@@ -83,3 +83,15 @@ usuario_registrar_categoria:
 usuario_actualizar_categoria:
     pattern:  /administrador/actualizar-categoria/id={id}
     defaults: { _controller: IngenieriaUsuarioBundle:Default:categoria }
+
+usuario_registrar_grupo:
+    pattern:  /administrador/registrar-grupo
+    defaults: { _controller: IngenieriaUsuarioBundle:Default:registrarGrupo }
+
+usuario_actualizar_grupo:
+    pattern:  /administrador/actualizar-grupo/id={id}
+    defaults: { _controller: IngenieriaUsuarioBundle:Default:actualizarGrupo }
+
+usuario_eliminar_grupo:
+    pattern:  /administrador/eliminar-grupo/id={id}
+    defaults: { _controller: IngenieriaUsuarioBundle:Default:eliminarGrupo }
