add view tutor to students

--- a/src/Ingenieria/EstudianteBundle/Resources/config/routing.yml
+++ b/src/Ingenieria/EstudianteBundle/Resources/config/routing.yml
@@ -33,3 +33,7 @@ ingenieria_estudiante_actividadmatriculada:
 ingenieria_estudiante_eliminaractividad:
     path:     /estudiante/eliminaractividad
     defaults: { _controller: IngenieriaEstudianteBundle:Default:eliminaractividad }
+
+ingenieria_estudiante_tutor:
+    path:     /estudiante/tutor
+    defaults: { _controller: IngenieriaEstudianteBundle:Default:tutor }
