--- a/src/Ingenieria/UsuarioBundle/Resources/config/services.yml
+++ b/src/Ingenieria/UsuarioBundle/Resources/config/services.yml
@@ -5,3 +5,10 @@ services:
 #    ingenieria_usuario.example:
 #        class: %ingenieria_usuario.example.class%
 #        arguments: [@service_id, "plain_value", %parameter%]
+
+services:
+    my.handler.session_idle:
+        class: Ingenieria\UsuarioBundle\Listener\SessionIdleHandler
+        arguments: ["@session", "@security.context", "@router", %session_max_idle_time%]
+        tags:
+            - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest }
