--- a/src/Ingenieria/EstudianteBundle/Resources/config/routing.yml
+++ b/src/Ingenieria/EstudianteBundle/Resources/config/routing.yml
@@ -45,3 +45,7 @@ ingenieria_estudiante_bitacora:
 ingenieria_estudiante_registrar_actvidad_semanal:
     path:     /estudiante/actividad-semanal
     defaults: { _controller: IngenieriaEstudianteBundle:Default:registrarActividadSemanal }
+
+ingenieria_estudiante_actualizar_actividad_semanal:
+    path:     /estudiante/actualizar-actividad-semanal/id={id}
+    defaults: { _controller: IngenieriaEstudianteBundle:Default:actualizarActividadSemanal }
