--- a/src/Ingenieria/ProfesorBundle/Resources/config/routing.yml
+++ b/src/Ingenieria/ProfesorBundle/Resources/config/routing.yml
@@ -37,3 +37,7 @@ ingenieria_profesor_rechazarcronograma:
 ingenieria_profesor_bitacora:
     pattern:  /profesor/bitacora/{id}
     defaults: { _controller: IngenieriaProfesorBundle:Default:bitacora }
+
+ingenieria_profesor_verificarActividad:
+    path:     /profesor/verificaractividad
+    defaults: { _controller: IngenieriaProfesorBundle:Default:verificarActividad }
