vista grupos en administrador and delete tutor

--- a/src/Ingenieria/UsuarioBundle/Resources/config/routing.yml
+++ b/src/Ingenieria/UsuarioBundle/Resources/config/routing.yml
@@ -107,3 +107,7 @@ usuario_actualizar_actividad:
 usuario_estudiantes_grupo:
     pattern:  /administrador/estudiantes-grupo/id={id}
     defaults: { _controller: IngenieriaUsuarioBundle:Default:estudiantesGrupo }
+
+usuario_bitacora:
+    pattern:  /administrador/bitacora-estudiante/id={id}
+    defaults: { _controller: IngenieriaUsuarioBundle:Default:bitacora }
